--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,6 +24,8 @@
     <li>附近有谁</li>
     <li>附近的人</li>
     <li>附近直播的人</li>
+	<li>摇一摇</li>
+	
 </ul>
 
 
